fix: fixed font issue and spacing issue

--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ header nav button.tweet-button {
   color: white;
   border: none;
   font-weight: bold;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto",
+ sans-serif;
   padding: 1em;
   width: 100%;
   border-radius: 50px;
@@ -96,6 +97,10 @@ header nav button.tweet-button {
 header nav button.tweet-button:hover {
   -webkit-filter: brightness(85%);
           filter: brightness(85%);
+}
+
+.tweet-button:focus {
+  outline: 0 !important;
 }
 
 .main-body-container {
@@ -131,7 +136,8 @@ header nav button.tweet-button:hover {
 }
 
 .tweet-full-name {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto",
+ sans-serif;
   font-weight: 600;
   margin-left: 6px;
 }
@@ -183,10 +189,12 @@ header nav button.tweet-button:hover {
       grid-template-columns: auto 100%;
   margin-bottom: 2em;
   padding: 1em;
+  font-family: "Roboto", sans-serif;
 }
 
 .create-tweet-section-right {
-  width: 100%;
+  width: 90%;
+  font-family: "Roboto", sans-serif;
 }
 
 .tweet-text-area {
@@ -217,7 +225,8 @@ header nav button.tweet-button:hover {
   color: white;
   border: none;
   font-weight: bold;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto",
+ sans-serif;
   padding: 1em;
   width: 100%;
   border-radius: 50px;
